[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-clause-review"
version = "1.0.0"
description = "An OpenEnv environment simulating real-world contract clause review."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
